--- a/nlp.html
+++ b/nlp.html
@@ -86,7 +86,7 @@
 <p>Oct 21, 2019 ... Create ML models for Advanced OCR and Cognitive Data Extraction capability 
 as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sparkcognition.applytojob.com/apply/CbTOgT6iN4/Front-End-Engineer-DeepNLP'>Front End Engineer - DeepNLP - SparkCognition - Career Page</a></h5> 
+<h5><a href='https://sparkcognition.applytojob.com/apply/CbTOgT6iN4/Front-End-Engineer-DeepNLP'>Front End Engineer - DeepNLP - SparkCognition - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 19, 2019 ... Apply to Front End Engineer - DeepNLP at SparkCognition in Austin, TX.</p>
 <hr/>
@@ -160,7 +160,7 @@ on various websites and social media platforms that will then be used for?...</p
 <p>2 days ago ... 109 is now hiring a AI Data Scientist/NLP Engineer in Washington DC. Review all 
 of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bigcloud.io/jobs/manager-of-machine-learning-nlp/'>Manager of Machine Learning (NLP) | Big Cloud Recruitment</a></h5> 
+<h5><a href='https://bigcloud.io/jobs/manager-of-machine-learning-nlp/'>Manager of Machine Learning (NLP) | Big Cloud Recruitment</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-11</p>
 <hr/>
@@ -186,7 +186,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/homex/a07eb43a-9513-4100-8d3c-fae448f16b15'>HomeX - NLP Research Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/a07eb43a-9513-4100-8d3c-fae448f16b15'>HomeX - NLP Research Engineer</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -396,7 +396,7 @@ unstructured text data analysis across industries. Added advantage would be?...<
 <p>Aug 15, 2019 ... Data Scientist NLP (Entale). London, United Kingdom. Accelerator ? Engineering
 . Full-time. Apply for this job. We are looking for a talented Data Scientist to?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lendeavor/e0696d76-180f-4994-a4ad-0376274d235a'>Lendeavor - Senior Software Engineer, Computer Vision and NLP</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lendeavor/e0696d76-180f-4994-a4ad-0376274d235a'>Lendeavor - Senior Software Engineer, Computer Vision and NLP</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
@@ -478,7 +478,7 @@ GumGum enables highly impactful digital advertising campaigns with contextual
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-08-06</p>
 <hr/>
-<h5><a href='https://fractalanalytics.applytojob.com/apply/KLOVi1n1C9/Senior-Data-Scientist-NLP'>Senior Data Scientist, NLP - Fractal Analytics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fractalanalytics.applytojob.com/apply/KLOVi1n1C9/Senior-Data-Scientist-NLP'>Senior Data Scientist, NLP - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply to Senior Data Scientist, NLP at Fractal Analytics in Mumbai, Maharashtra, 
 India.</p>
